--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Montserrat:wght@300;400;600;800&family=Pacifico&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-   <script type="module" src="./src/main.jsx"></script>
+    <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
